Change Git clone URL to HTTPS format

--- a/install.html
+++ b/install.html
@@ -226,7 +226,7 @@
             <h3>Git Repository</h3>
             <p>Clone the project to get started:</p>
             <div class="git-link">
-                git clone git@github.com:Mohamed-Sayed-Ismail/-laravel-api-example.git
+                git clone https://github.com/Mohamed-Sayed-Ismail/-laravel-api-example.git
             </div>
         </div>
 
@@ -275,7 +275,7 @@
             <div class="step">
                 <h3><span class="step-number">2</span> Clone Repository</h3>
                 <div class="code-block">
-git clone git@github.com:Mohamed-Sayed-Ismail/-laravel-api-example.git<br>
+git clone https://github.com/Mohamed-Sayed-Ismail/-laravel-api-example.git<br>
 cd laravel-api-example
                 </div>
             </div>
@@ -426,7 +426,7 @@ php -m | grep sqlite
     </div>
 
     <div class="footer">
-        <p>Laravel Location API - CLI Only &copy; 2025 | Repository: git@github.com:Mohamed-Sayed-Ismail/-laravel-api-example.git</p>
+        <p>Laravel Location API - CLI Only &copy; 2025 | Repository: https://github.com/Mohamed-Sayed-Ismail/-laravel-api-example.git</p>
     </div>
 </body>
 </html>
